testsuite/tests/typing-gadts/pr6690.ml.reference

#                   type 'a visit_action
type insert
type 'a local_visit_action
type ('a, 'result, 'visit_action) context =
    Local : ('a, 'a * insert, 'a local_visit_action) context
  | Global : ('a, 'a, 'a visit_action) context
#             Characters 104-109:
    | Local -> fun _ -> raise Exit
      ^^^^^
Error: This pattern matches values of type
         ($0, $0 * insert, $0 local_visit_action) context
       but a pattern was expected which matches values of type
         ($0, $0 * insert, visit_action) context
       The type constructor $0 would escape its scope
#             Characters 112-117:
    | Local -> fun _ -> raise Exit
      ^^^^^
Error: This pattern matches values of type
         ($'a, $'a * insert, $'a local_visit_action) context
       but a pattern was expected which matches values of type
         ($'a, $'a * insert, visit_action) context
       The type constructor $'a would escape its scope
#             val vexpr : (unit, 'a, 'b) context -> unit -> 'b = <fun>
# 
